# uk-wind-generation-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
azure/: create-storage-account.bicep
notebooks/: config.yaml  integrated_views.ipynb  weather_data.ipynb
src/historic_generation_wrangler/: __init__.py  historic_generation_wrangler.py
src/renewable_locations_wrangler/: __init__.py  renewable_locations_wrangler.py
src/weather_wrangler/: __init__.py  weather_wrangler.py
