[tool.poetry]
name = "uk-wind-generation-analytics"
version = "0.1.0"
description = "Data driven insights into how a UK generation strategy based on wind alone cannot sustain the grid."
authors = ["Barry Smart <barry.j.a.smart@gmail.com>"]
readme = "README.md"

packages = [
    { include = "renewable_locations_wrangler", from = "src" },
    { include = "historic_generation_wrangler", from = "src" },
    { include = "weather_wrangler", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "*"
polars = "*"
pylint = "*"
pyyaml = "^6.0.1"
streamlit = "^1.39.0"
plotly = "^5.24.1"
azure-identity = "^1.19.0"
fastexcel = "^0.12.0"
black = "^24.10.0"
frictionless = "^5.18.0"
nbformat = "^5.10.4"
pyproj = "^3.7.0"
meteomatics = "^2.11.4"
arrow = "^1.3.0"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
